--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,76 @@
 
-Changes with nginx 1.2.6                                         11 Dec 2012
+Changes with nginx 1.3.11                                        10 Jan 2013
+
+    *) Bugfix: a segmentation fault might occur if logging was used; the bug
+       had appeared in 1.3.10.
+
+    *) Bugfix: the "proxy_pass" directive did not work with IP addresses
+       without port specified; the bug had appeared in 1.3.10.
+
+    *) Bugfix: a segmentation fault occurred on start or during
+       reconfiguration if the "keepalive" directive was specified more than
+       once in a single upstream block.
+
+    *) Bugfix: parameter "default" of the "geo" directive did not set
+       default value for IPv6 addresses.
+
+
+Changes with nginx 1.3.10                                        25 Dec 2012
+
+    *) Change: domain names specified in configuration file are now resolved
+       to IPv6 addresses as well as IPv4 ones.
+
+    *) Change: now if the "include" directive with mask is used on Unix
+       systems, included files are sorted in alphabetical order.
+
+    *) Change: the "add_header" directive adds headers to 201 responses.
+
+    *) Feature: the "geo" directive now supports IPv6 addresses in CIDR
+       notation.
+
+    *) Feature: the "flush" and "gzip" parameters of the "access_log"
+       directive.
+
+    *) Feature: variables support in the "auth_basic" directive.
+
+    *) Bugfix: nginx could not be built with the ngx_http_perl_module in
+       some cases.
+
+    *) Bugfix: a segmentation fault might occur in a worker process if the
+       ngx_http_xslt_module was used.
+
+    *) Bugfix: nginx could not be built on MacOSX in some cases.
+       Thanks to Piotr Sikora.
+
+    *) Bugfix: the "limit_rate" directive with high rates might result in
+       truncated responses on 32-bit platforms.
+       Thanks to Alexey Antropov.
+
+    *) Bugfix: a segmentation fault might occur in a worker process if the
+       "if" directive was used.
+       Thanks to Piotr Sikora.
+
+    *) Bugfix: a "100 Continue" response was issued with "413 Request Entity
+       Too Large" responses.
+
+    *) Bugfix: the "image_filter", "image_filter_jpeg_quality" and
+       "image_filter_sharpen" directives might be inherited incorrectly.
+       Thanks to Ian Babrou.
+
+    *) Bugfix: "crypt_r() failed" errors might appear if the "auth_basic"
+       directive was used on Linux.
+
+    *) Bugfix: in backup servers handling.
+       Thanks to Thomas Chen.
+
+    *) Bugfix: proxied HEAD requests might return incorrect response if the
+       "gzip" directive was used.
+
+
+Changes with nginx 1.3.9                                         27 Nov 2012
+
+    *) Feature: support for chunked transfer encoding while reading client
+       request body.
 
     *) Feature: the $request_time and $msec variables can now be used not
        only in the "log_format" directive.
@@ -10,7 +81,7 @@ Changes with nginx 1.2.6                                         11 Dec 2012
     *) Bugfix: in the ngx_http_dav_module.
 
 
-Changes with nginx 1.2.5                                         13 Nov 2012
+Changes with nginx 1.3.8                                         30 Oct 2012
 
     *) Feature: the "optional_no_ca" parameter of the "ssl_verify_client"
        directive.
@@ -20,23 +91,47 @@ Changes with nginx 1.2.5                                         13 Nov 2012
        variables can now be used not only in the "log_format" directive.
        Thanks to Benjamin Grössing.
 
-    *) Feature: resolver now randomly rotates addresses returned from cache.
-       Thanks to Anton Jouline.
-
     *) Feature: the "auto" parameter of the "worker_processes" directive.
 
     *) Bugfix: "cache file ... has md5 collision" alert.
 
+    *) Bugfix: in the ngx_http_gunzip_filter_module.
+
+    *) Bugfix: in the "ssl_stapling" directive.
+
+
+Changes with nginx 1.3.7                                         02 Oct 2012
+
+    *) Feature: OCSP stapling support.
+       Thanks to Comodo, DigiCert and GlobalSign for sponsoring this work.
+
+    *) Feature: the "ssl_trusted_certificate" directive.
+
+    *) Feature: resolver now randomly rotates addresses returned from cache.
+       Thanks to Anton Jouline.
+
     *) Bugfix: OpenSSL 0.9.7 compatibility.
 
 
-Changes with nginx 1.2.4                                         25 Sep 2012
+Changes with nginx 1.3.6                                         12 Sep 2012
+
+    *) Feature: the ngx_http_gunzip_filter_module.
+
+    *) Feature: the "memcached_gzip_flag" directive.
+
+    *) Feature: the "always" parameter of the "gzip_static" directive.
 
     *) Bugfix: in the "limit_req" directive; the bug had appeared in 1.1.14.
        Thanks to Charles Chen.
 
     *) Bugfix: nginx could not be built by gcc 4.7 with -O2 optimization if
        the --with-ipv6 option was used.
+
+
+Changes with nginx 1.3.5                                         21 Aug 2012
+
+    *) Change: the ngx_http_mp4_module module no longer skips tracks in
+       formats other than H.264 and AAC.
 
     *) Bugfix: a segmentation fault might occur in a worker process if the
        "map" directive was used with variables as values.
@@ -58,7 +153,10 @@ Changes with nginx 1.2.4                                         25 Sep 2012
        Thanks to HAYASHI Kentaro.
 
 
-Changes with nginx 1.2.3                                         07 Aug 2012
+Changes with nginx 1.3.4                                         31 Jul 2012
+
+    *) Change: the "ipv6only" parameter is now turned on by default for
+       listening IPv6 sockets.
 
     *) Feature: the Clang compiler support.
 
@@ -74,6 +172,11 @@ Changes with nginx 1.2.3                                         07 Aug 2012
        "fastcgi_hide_header", "scgi_hide_header", and "uwsgi_hide_header"
        directives might be inherited incorrectly.
 
+
+Changes with nginx 1.3.3                                         10 Jul 2012
+
+    *) Feature: entity tags support and the "etag" directive.
+
     *) Bugfix: trailing dot in a source value was not ignored if the "map"
        directive was used with the "hostnames" parameter.
 
@@ -82,7 +185,7 @@ Changes with nginx 1.2.3                                         07 Aug 2012
        to a named location.
 
 
-Changes with nginx 1.2.2                                         03 Jul 2012
+Changes with nginx 1.3.2                                         26 Jun 2012
 
     *) Change: the "single" parameter of the "keepalive" directive is now
        ignored.
@@ -90,39 +193,11 @@ Changes with nginx 1.2.2                                         03 Jul 2012
     *) Change: SSL compression is now disabled when using all versions of
        OpenSSL, including ones prior to 1.0.0.
 
-    *) Feature: the "proxy_pass", "fastcgi_pass", "scgi_pass", "uwsgi_pass"
-       directives, and the "server" directive inside the "upstream" block,
-       now support IPv6 addresses.
-
-    *) Feature: the "resolver" directive now supports IPv6 addresses and an
-       optional port specification.
-
-    *) Feature: the "least_conn" directive inside the "upstream" block.
-
-    *) Feature: it is now possible to specify a weight for servers while
-       using the "ip_hash" directive.
-
     *) Feature: it is now possible to use the "ip_hash" directive to balance
        IPv6 clients.
 
     *) Feature: the $status variable can now be used not only in the
        "log_format" directive.
-
-    *) Bugfix: nginx could not be built with ngx_cpp_test_module; the bug
-       had appeared in 1.1.12.
-
-    *) Bugfix: access to variables from SSI and embedded perl module might
-       not work after reconfiguration.
-       Thanks to Yichun Zhang.
-
-    *) Bugfix: in the ngx_http_xslt_filter_module.
-       Thanks to Kuramoto Eiji.
-
-    *) Bugfix: memory leak if $geoip_org variable was used.
-       Thanks to Denis F. Latypoff.
-
-    *) Bugfix: in the "proxy_cookie_domain" and "proxy_cookie_path"
-       directives.
 
     *) Bugfix: a segmentation fault might occur in a worker process on
        shutdown if the "resolver" directive was used.
@@ -142,11 +217,45 @@ Changes with nginx 1.2.2                                         03 Jul 2012
        while reconfiguration.
 
 
-Changes with nginx 1.2.1                                         05 Jun 2012
+Changes with nginx 1.3.1                                         05 Jun 2012
 
     *) Security: now nginx/Windows ignores trailing dot in URI path
        component, and does not allow URIs with ":$" in it.
        Thanks to Vladimir Kochetkov, Positive Research Center.
+
+    *) Feature: the "proxy_pass", "fastcgi_pass", "scgi_pass", "uwsgi_pass"
+       directives, and the "server" directive inside the "upstream" block,
+       now support IPv6 addresses.
+
+    *) Feature: the "resolver" directive now supports IPv6 addresses and an
+       optional port specification.
+
+    *) Feature: the "least_conn" directive inside the "upstream" block.
+
+    *) Feature: it is now possible to specify a weight for servers while
+       using the "ip_hash" directive.
+
+    *) Bugfix: a segmentation fault might occur in a worker process if the
+       "image_filter" directive was used; the bug had appeared in 1.3.0.
+
+    *) Bugfix: nginx could not be built with ngx_cpp_test_module; the bug
+       had appeared in 1.1.12.
+
+    *) Bugfix: access to variables from SSI and embedded perl module might
+       not work after reconfiguration.
+       Thanks to Yichun Zhang.
+
+    *) Bugfix: in the ngx_http_xslt_filter_module.
+       Thanks to Kuramoto Eiji.
+
+    *) Bugfix: memory leak if $geoip_org variable was used.
+       Thanks to Denis F. Latypoff.
+
+    *) Bugfix: in the "proxy_cookie_domain" and "proxy_cookie_path"
+       directives.
+
+
+Changes with nginx 1.3.0                                         15 May 2012
 
     *) Feature: the "debug_connection" directive now supports IPv6 addresses
        and the "unix:" parameter.
